<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5CE"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".NamePrompt">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:text="@string/welcome_st"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_info"
        android:textSize="15sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/welcome_name"
                android:textAlignment="gravity"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:autofillHints="age"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_age"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/welcome_age"
                android:textAlignment="gravity"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtAge"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:autofillHints="Age"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="years"
                    android:textAlignment="gravity"
                    android:textSize="16sp" />
            </LinearLayout>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_sex"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/rg_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rb_male">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female" />
            </RadioGroup>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome_bt" />


</LinearLayout>